# vocode-sandbox

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js
backend/: README.md  main.py  pyproject.toml
backend/templates/: index.html
client_backend/: .env  base_agent.py  main.py  pyproject.toml
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx
src/: App.tsx  index.css  index.tsx  theme.js
src/components/: Avatar.css  Avatar.tsx  Body.css  Body.tsx  Changelog.tsx  Marquee.tsx  Menu.tsx  Nav.css  Nav.tsx  Settings.tsx  Spinny.css  Spinny.tsx  ThemePicker.tsx  Transcript.tsx  Window.tsx  Xsvg.tsx
